<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="使用adb命令行操作"
        android:textColor="@color/colorAccent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip">
        <Button
            android:id="@+id/button_app_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_install"/>
        <Button
            android:id="@+id/button_app_uninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_uninstall"/>
    </LinearLayout>
        <Button
            android:id="@+id/button_appsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_sc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip">
        <Button
            android:id="@+id/button_app_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_phone_root"/>
        <Button
            android:id="@+id/button_app_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_screen"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip">
        <Button
            android:id="@+id/button_port_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_port_reset"/>
        <Button
            android:id="@+id/button_app_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_time"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="使用非命令行获取"
        android:textColor="@color/colorAccent"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <Button
           android:id="@+id/button_sethwrotation"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="旋转屏幕"/>
   </LinearLayout>
</LinearLayout>
